# zero2prod

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: general.yml
src/: lib.rs  main.rs
tests/: health_check.rs
