[package]
name = "zero2prod"
version = "0.1.0"
authors = ["rsb <rsb.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the communit convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to the `package.name` which is what we want
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries.
# If you want to manage multiple libaries in the same repository
# have a look at the workspace feature - we'll cover it later on
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
